[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-pkg-history"
version = "1.0.0"
description = "A TUI tool to view macOS PKG installation history and files"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yalois", email = "yalois.xy@foxmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Console",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers"
    
]
dependencies = [
    "rich",
]

[project.scripts]
mac-pkg-history = "mac_pkg_history.main:main"

[tool.setuptools.packages.find]
where = ["."]                
include = ["mac_pkg_history*"]

[project.urls]
Homepage = "https://github.com/Yalois/mac-pkg-history"
Repository = "https://github.com/Yalois/mac-pkg-history"
Issues = "https://github.com/Yalois/mac-pkg-history/issues"